# TBD

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/general/: engine.cpp  engine.hpp  window.cpp  window.hpp
src/misc/: interfaces.hpp  types.hpp  utils.hpp
src/renderer/: resource_allocator.hpp
src/renderer/core/: resource_allocator.hpp  rhi_interface.hpp
src/renderer/rendering_dag/: rendering_dag.cpp  rendering_dag.hpp
src/renderer/rendering_dag/rendering_commands/: rendering_commands.hpp
src/renderer/shaders/: gradient.comp  triangle.frag  triangle.vert
src/renderer/vulkan/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_descriptor_set_pool.cpp  vulkan_descriptor_set_pool.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_rhi.cpp  vulkan_rhi.hpp  vulkan_texture.cpp  vulkan_texture.hpp  vulkan_utils.hpp
